--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,17 @@
 # MySQL properties
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/mihassbd5
+spring.datasource.url=jdbc:mysql://localhost:3306/mihassbd6
 spring.datasource.username=root
 spring.datasource.password=root19root
 # Hibernate properties
 spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
 
 spring.mvc.hiddenmethod.filter.enabled=true
+
+spring.jpa.show-sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+logging.level.ru.kata.spring.boot_security.demo=DEBUG
+logging.level.org.springframework.web=INFO
