--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,8 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 logging.level.ru.kata.spring.boot_security.demo=DEBUG
 logging.level.org.springframework.web=INFO
+
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.orm.jpa=DEBUG
+
+
